src/test/ui/issues/issue-6596-1.stderr
error: unknown macro variable `nonexistent`
  --> $DIR/issue-6596-1.rs:3:9
   |
LL |         $nonexistent
   |         ^^^^^^^^^^^^ unknown macro variable
...
LL |     e!(foo);
   |     -------- in this macro invocation

error[E0425]: cannot find value `nonexistent` in this scope
  --> $DIR/issue-6596-1.rs:14:9
   |
LL |         $nonexistent
   |         ^^^^^^^^^^^^ not found in this scope
...
LL |     e!(foo);
   |     -------- in this macro invocation

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
